{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 517,
  "lineage": "02b2c868-fbe2-55a2-38d2-0ec748d0a264",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:274645433463:loadbalancer/app/bobbins-alb/9fce36a16680d780",
            "arn_suffix": "app/bobbins-alb/9fce36a16680d780",
            "dns_name": "bobbins-alb-884742474.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:274645433463:loadbalancer/app/bobbins-alb/9fce36a16680d780",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bobbins-alb",
            "security_groups": [
              "sg-0fdbc97c4462ebc07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028bf1e345a10326f"
              },
              {
                "subnet_id": "subnet-05645ff4cbfd48c28"
              },
              {
                "subnet_id": "subnet-06b49bdacd6bfd8cc"
              }
            ],
            "subnets": [
              "subnet-028bf1e345a10326f",
              "subnet-05645ff4cbfd48c28",
              "subnet-06b49bdacd6bfd8cc"
            ],
            "tags": {
              "Name": "bobbins-alb",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "bobbins-alb",
              "environment": "dev",
              "project": "bobbins"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:274645433463:listener/app/bobbins-alb/9fce36a16680d780/5abbacee7620e95b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:274645433463:targetgroup/pref-20210504153209034300000003/1e319b1301edf14c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:274645433463:listener/app/bobbins-alb/9fce36a16680d780/5abbacee7620e95b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:274645433463:loadbalancer/app/bobbins-alb/9fce36a16680d780",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.ec2_instances.aws_instance.app",
            "module.ec2_instances.aws_key_pair.webserver-key",
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:274645433463:targetgroup/pref-20210504153209034300000003/1e319b1301edf14c",
            "arn_suffix": "targetgroup/pref-20210504153209034300000003/1e319b1301edf14c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:274645433463:targetgroup/pref-20210504153209034300000003/1e319b1301edf14c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20210504153209034300000003",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pref-",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "pref-",
              "environment": "dev",
              "project": "bobbins"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.ec2_instances.aws_instance.app",
            "module.ec2_instances.aws_key_pair.webserver-key",
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:274645433463:targetgroup/pref-20210504153209034300000003/1e319b1301edf14c-20210504153212286300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:274645433463:targetgroup/pref-20210504153209034300000003/1e319b1301edf14c",
            "target_id": "i-089acc2a9faa9798e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.ec2_instances.aws_instance.app",
            "module.ec2_instances.aws_key_pair.webserver-key",
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:security-group/sg-052537f7d314952cd",
            "description": "Security group for web-servers with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-052537f7d314952cd",
            "ingress": [],
            "name": "web-sg-bobbins-dev-20210504152948037300000001",
            "name_prefix": "web-sg-bobbins-dev-",
            "owner_id": "274645433463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-bobbins-dev",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "web-sg-bobbins-dev",
              "environment": "dev",
              "project": "bobbins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-488006717",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-052537f7d314952cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2781602371",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052537f7d314952cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-2018035307",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052537f7d314952cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-863197355",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052537f7d314952cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-323076086",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052537f7d314952cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "JMX",
            "from_port": 1099,
            "id": "sgrule-3247443015",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052537f7d314952cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1099,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1477076561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-052537f7d314952cd",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:274645433463:instance/i-089acc2a9faa9798e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089acc2a9faa9798e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037456c752f987525",
            "private_dns": "ip-10-0-101-171.ec2.internal",
            "private_ip": "10.0.101.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a5d7218aa98e429",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d221a565dfdec75f",
            "tags": {
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "environment": "dev",
              "project": "bobbins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052537f7d314952cd"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.ec2_instances.aws_key_pair.webserver-key",
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:security-group/sg-0fdbc97c4462ebc07",
            "description": "Security group for load balancer with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0fdbc97c4462ebc07",
            "ingress": [],
            "name": "lb-sg-bobbins-dev-20210504152948044700000002",
            "name_prefix": "lb-sg-bobbins-dev-",
            "owner_id": "274645433463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg-bobbins-dev",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "lb-sg-bobbins-dev",
              "environment": "dev",
              "project": "bobbins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-701688482",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fdbc97c4462ebc07",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1787670230",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fdbc97c4462ebc07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-648975611",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fdbc97c4462ebc07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1076880393",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fdbc97c4462ebc07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "JMX",
            "from_port": 1099,
            "id": "sgrule-2675334871",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fdbc97c4462ebc07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1099,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3752880313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fdbc97c4462ebc07",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03396da9310e69b66",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-147-171.compute-1.amazonaws.com",
            "public_ip": "54.158.147.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-017e4c598b4e7bc4e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-225-38-68.compute-1.amazonaws.com",
            "public_ip": "34.225.38.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-058260bb4e52a356d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-161-180-47.compute-1.amazonaws.com",
            "public_ip": "54.161.180.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:internet-gateway/igw-008f61cabbeadfea7",
            "id": "igw-008f61cabbeadfea7",
            "owner_id": "274645433463",
            "tags": {
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03396da9310e69b66",
            "id": "nat-0012511c69897dfcb",
            "network_interface_id": "eni-0668c6cec1cda4afb",
            "private_ip": "10.0.1.179",
            "public_ip": "54.158.147.171",
            "subnet_id": "subnet-05645ff4cbfd48c28",
            "tags": {
              "Name": "-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017e4c598b4e7bc4e",
            "id": "nat-061174e247c1735af",
            "network_interface_id": "eni-066eb4fe103292c80",
            "private_ip": "10.0.2.46",
            "public_ip": "34.225.38.68",
            "subnet_id": "subnet-06b49bdacd6bfd8cc",
            "tags": {
              "Name": "-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058260bb4e52a356d",
            "id": "nat-00e1fbc4c7533420b",
            "network_interface_id": "eni-00a9954e56af7688e",
            "private_ip": "10.0.3.47",
            "public_ip": "54.161.180.47",
            "subnet_id": "subnet-028bf1e345a10326f",
            "tags": {
              "Name": "-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04af64282aeecc48a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0012511c69897dfcb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04af64282aeecc48a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b859e4a10fa4a7371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-061174e247c1735af",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b859e4a10fa4a737",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a2fe525c2f159b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00e1fbc4c7533420b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a2fe525c2f159b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-008f61cabbeadfea7",
            "id": "r-rtb-059f3181ce9f7748b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059f3181ce9f7748b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:route-table/rtb-04af64282aeecc48a",
            "id": "rtb-04af64282aeecc48a",
            "owner_id": "274645433463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-private-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:route-table/rtb-0b859e4a10fa4a737",
            "id": "rtb-0b859e4a10fa4a737",
            "owner_id": "274645433463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-private-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:route-table/rtb-09a2fe525c2f159b3",
            "id": "rtb-09a2fe525c2f159b3",
            "owner_id": "274645433463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-private-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:route-table/rtb-059f3181ce9f7748b",
            "id": "rtb-059f3181ce9f7748b",
            "owner_id": "274645433463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-public",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026d6e85e3cf6a674",
            "route_table_id": "rtb-04af64282aeecc48a",
            "subnet_id": "subnet-0d221a565dfdec75f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0859d5090ae2d081f",
            "route_table_id": "rtb-0b859e4a10fa4a737",
            "subnet_id": "subnet-09a7e3a87643732b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033c5fe1e744cffdf",
            "route_table_id": "rtb-09a2fe525c2f159b3",
            "subnet_id": "subnet-04d1d28a727ba9ddd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0411926ca0d173599",
            "route_table_id": "rtb-059f3181ce9f7748b",
            "subnet_id": "subnet-05645ff4cbfd48c28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2391b3a593e809d",
            "route_table_id": "rtb-059f3181ce9f7748b",
            "subnet_id": "subnet-06b49bdacd6bfd8cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9a42a20d1690c2f",
            "route_table_id": "rtb-059f3181ce9f7748b",
            "subnet_id": "subnet-028bf1e345a10326f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:subnet/subnet-0d221a565dfdec75f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0d221a565dfdec75f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274645433463",
            "tags": {
              "Name": "-private-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-private-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:subnet/subnet-09a7e3a87643732b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-09a7e3a87643732b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274645433463",
            "tags": {
              "Name": "-private-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-private-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:subnet/subnet-04d1d28a727ba9ddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-04d1d28a727ba9ddd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274645433463",
            "tags": {
              "Name": "-private-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-private-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:subnet/subnet-05645ff4cbfd48c28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05645ff4cbfd48c28",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274645433463",
            "tags": {
              "Name": "-public-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-public-us-east-1a",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:subnet/subnet-06b49bdacd6bfd8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06b49bdacd6bfd8cc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274645433463",
            "tags": {
              "Name": "-public-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-public-us-east-1b",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:subnet/subnet-028bf1e345a10326f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-028bf1e345a10326f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274645433463",
            "tags": {
              "Name": "-public-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "Name": "-public-us-east-1c",
              "environment": "dev",
              "project": "bobbins"
            },
            "vpc_id": "vpc-0629e7dfbdf0ee019"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274645433463:vpc/vpc-0629e7dfbdf0ee019",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039f7893748dc147b",
            "default_route_table_id": "rtb-0257309bca116079e",
            "default_security_group_id": "sg-0e38e0d075479da40",
            "dhcp_options_id": "dopt-017c9e7a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0629e7dfbdf0ee019",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0257309bca116079e",
            "owner_id": "274645433463",
            "tags": {
              "environment": "dev",
              "project": "bobbins"
            },
            "tags_all": {
              "environment": "dev",
              "project": "bobbins"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}